crates/kul-core/tests/snapshots/query__failing_project_yields_error_envelope.snap
---
source: crates/kul-core/tests/query.rs
expression: "person_json(&check, \"alice\")"
---
{
  "ok": false,
  "diagnostics": [
    {
      "code": "KUL-R03",
      "severity": "error",
      "message": "person `alice` needs a `name:` field — add `name:\"…\"` to the declaration",
      "primary": {
        "file": "test.kul",
        "byteStart": 7,
        "byteEnd": 12,
        "line": 1,
        "column": 8
      },
      "related": []
    }
  ]
}
