crates/kul-core/tests/snapshots/query__multi_file_person_lookup.snap
---
source: crates/kul-core/tests/query.rs
expression: "person_json(&check, \"diego\")"
---
{
  "ok": true,
  "result": {
    "id": "diego",
    "name": "Diego Fernández",
    "gender": "male",
    "born": {
      "value": "1935",
      "precision": "year",
      "circa": true
    }
  }
}
