crates/kul-core/tests/snapshots/query__polygamous_marriage_lookup.snap
---
source: crates/kul-core/tests/query.rs
expression: "marriage_json(&check, \"m_khalid_aisha\")"
---
{
  "ok": true,
  "result": {
    "id": "m_khalid_aisha",
    "spouses": [
      "khalid",
      "aisha"
    ],
    "start": {
      "value": "1975-05-04",
      "precision": "day",
      "circa": false
    }
  }
}
