crates/kul-core/tests/snapshots/query__unknown_marriage_id_yields_null_result.snap
---
source: crates/kul-core/tests/query.rs
expression: "marriage_json(&check, \"nobody\")"
---
{
  "ok": true,
  "result": null
}
