crates/kul-core/tests/snapshots/query__unknown_person_id_yields_null_result.snap
---
source: crates/kul-core/tests/query.rs
expression: "person_json(&check, \"nobody\")"
---
{
  "ok": true,
  "result": null
}
