crates/kul-core/tests/snapshots/query__wrong_kind_marriage_id_yields_null_result.snap
---
source: crates/kul-core/tests/query.rs
expression: "marriage_json(&check, \"hiroshi\")"
---
{
  "ok": true,
  "result": null
}
