crates/kul-core/tests/snapshots/query__wrong_kind_person_id_yields_null_result.snap
---
source: crates/kul-core/tests/query.rs
expression: "person_json(&check, \"m_hiroshi_yuki\")"
---
{
  "ok": true,
  "result": null
}
